--- a/app/src/main/res/layout/activity_google.xml
+++ b/app/src/main/res/layout/activity_google.xml
@@ -29,7 +29,7 @@
 
 
     <com.google.android.gms.common.SignInButton
-        android:id="@+id/sign_in_button"
+        android:id="@+id/google_sign_in_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
