--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,14 +8,6 @@
     android:orientation="vertical"
     tools:context=".auth.LoginActivity">
 
-
-    <TextView
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:text="Log In"
-        android:background="@color/colorPrimaryDark"
-        android:layout_gravity="center"
-        android:layout_marginTop="20dp"/>
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/input_log_email"
@@ -34,7 +26,9 @@
         android:id="@+id/input_log_pass"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp">
+        android:layout_margin="5dp"
+        tools:layout_editor_absoluteX="5dp"
+        tools:layout_editor_absoluteY="67dp">
 
         <android.support.design.widget.TextInputEditText
             android:layout_width="match_parent"
@@ -44,10 +38,12 @@
 
     <Button
         android:id="@+id/log_in_btn"
-        android:layout_width="match_parent"
+        android:layout_width="383dp"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:background="#006555"
-        android:text="@string/log_in" />
+        android:text="@string/log_in"
+        tools:layout_editor_absoluteX="4dp"
+        tools:layout_editor_absoluteY="160dp" />
 
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
