--- a/app/src/main/res/menu/new_entry_menu.xml
+++ b/app/src/main/res/menu/new_entry_menu.xml
@@ -2,9 +2,9 @@
     <menu xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto">
         <item
-            android:id="@+id/new_note_delete_btn"
-            android:icon="@drawable/ic_delete_forever_white_24dp"
-            android:orderInCategory="100"
-            android:title="Delete"
+            android:id="@+id/new_entry_delete_btn"
+            android:icon="@drawable/ic_delete"
+            android:orderInCategory="150"
+            android:text="Delete"
             app:showAsAction="always" />
     </menu>
